[package]
name = "lembic"
description = "Distilling some data for CFDE"
version = "0.0.1"
edition = "2021"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/lembic"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.61.0"
serde_json = "1.0.133"
penyu = { git = "https://github.com/broadinstitute/penyu.git", rev= "1b424b8cab5bab4743636ef232457f11091cafa5" }
home = "0.5.9"
