[package]
name = "lembic"
description = "Distilling some data for CFDE"
version = "0.0.1"
edition = "2024"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/lembic"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.79.0"
serde_json = "1.0.140"
penyu = { git = "https://github.com/broadinstitute/penyu.git", rev= "69fae7e971ced1af680219f0990fb9b99371c039" }
home = "0.5.11"
log = "0.4.22"
